docs/examples/invalid/semanticErr/extension/class/nonExistentField.wacc
{
  class A {
    int[] a;

    void init(int[] x) {
      @a = x
    }

    void b() {
      @b = 0
    }
  }

  A a = new A() ;

  call a->b()
}
